--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,8 @@
-name: cloud-template
+name: cloud-registry
 env: public
-port: 0
+port: 8080
 registry:
-  url: http://localhost:5000/api/v1/app
+  url: http://localhost:8080/api/v1/app
+registryServer:
+  type: "memory"
+  conf: ''
